# freya-transition

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: delayed.rs  segmented.rs  trait_based.rs
src/: lib.rs  segmented_animation.rs  state_based.rs  trait_based.rs  transition.rs  value_based.rs
src/animation/: mod.rs  spec.rs  vector.rs  vector_converters.rs
src/animations/: keyframe.rs  mod.rs  path.rs
src/curves/: bounce.rs  cubic.rs  decelerate.rs  elastic.rs  interval.rs  linear.rs  mod.rs  saw_tooth.rs  split.rs  step.rs  three_point_cubic.rs  threshold.rs
src/tween/: lerp.rs  mod.rs  value.rs
